--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ ADMIN_URL=http://localhost:9090
 SERVICE_URL=http://localhost:8081
 EUREKA_URL=http://localhost:8761/eureka/
 EUREKA_HOST=localhost
+PROFILE_SERVICE_URL=http://localhost:8082/
